maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:5: error: value unary_! is not a member of Unit
    while (!direction()){
           ^