maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
  avance()
  while(!estSurBiscuit()){
    while (!direction()){
      keepHandOnWall()
    }
  }
  prendBiscuit()
}
    

def keepHandOnWall(){
  gauche()
  if (estFaceMur()){
    droite()
    if(estFaceMur()){
      droite()
    }else{
      avance()
    }
  }else{
    avance()
  }
}

def direction(){
  if (getDirection()==Direction.NORTH && !estFaceMur()){
    while(!estFaceMur()){
      avance()
    }
  }
}